removed old fonts from fonts folder, replaced with web-friendly versions. Also made changes in fonts.css and style.css to compensate. Changed the WhatsApp number in the Contact Us layer to the official number from the placeholder. Ensured gradient background appears on Firefox, Opera and Internet Explorer

--- a/fonts.css
+++ b/fonts.css
@@ -1,138 +1,151 @@
-@font-face
-{
-font-family: skarp;
-src: url(fonts/skarp.ttf);
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on July 13, 2015 */
+
+
+
+@font-face {
+    font-family: 'bebas_neuethin';
+    src: url('fonts/bebasthin-webfont.eot');
+    src: url('fonts/bebasthin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/bebasthin-webfont.woff2') format('woff2'),
+         url('fonts/bebasthin-webfont.woff') format('woff'),
+         url('fonts/bebasthin-webfont.ttf') format('truetype'),
+         url('fonts/bebasthin-webfont.svg#bebas_neuethin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: neue;
-src: url(fonts/neue.ttf);
+
+
+
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('fonts/opensans-light-webfont.eot');
+    src: url('fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans-light-webfont.woff2') format('woff2'),
+         url('fonts/opensans-light-webfont.woff') format('woff'),
+         url('fonts/opensans-light-webfont.ttf') format('truetype'),
+         url('fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
 
-@font-face
-{
-font-family: universe;
-src: url(fonts/universe.ttf);
+
+
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('fonts/opensans-regular-webfont.eot');
+    src: url('fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans-regular-webfont.woff2') format('woff2'),
+         url('fonts/opensans-regular-webfont.woff') format('woff'),
+         url('fonts/opensans-regular-webfont.ttf') format('truetype'),
+         url('fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: anders;
-src: url(fonts/anders.ttf);
+
+
+
+@font-face {
+    font-family: 'open_sanssemibold';
+    src: url('fonts/opensans-semibold_-_copy-webfont.eot');
+    src: url('fonts/opensans-semibold_-_copy-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans-semibold_-_copy-webfont.woff2') format('woff2'),
+         url('fonts/opensans-semibold_-_copy-webfont.woff') format('woff'),
+         url('fonts/opensans-semibold_-_copy-webfont.ttf') format('truetype'),
+         url('fonts/opensans-semibold_-_copy-webfont.svg#open_sanssemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: caviar;
-src: url(fonts/caviar.ttf);
+@font-face {
+    font-family: 'bebas_neuebold';
+    src: url('fonts/bebasbold-webfont.eot');
+    src: url('fonts/bebasbold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/bebasbold-webfont.woff2') format('woff2'),
+         url('fonts/bebasbold-webfont.woff') format('woff'),
+         url('fonts/bebasbold-webfont.ttf') format('truetype'),
+         url('fonts/bebasbold-webfont.svg#bebas_neuebold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: rb;
-src: url(fonts/rb.otf);
+
+
+
+@font-face {
+    font-family: 'bebas_neuebook';
+    src: url('fonts/bebasbook-webfont.eot');
+    src: url('fonts/bebasbook-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/bebasbook-webfont.woff2') format('woff2'),
+         url('fonts/bebasbook-webfont.woff') format('woff'),
+         url('fonts/bebasbook-webfont.ttf') format('truetype'),
+         url('fonts/bebasbook-webfont.svg#bebas_neuebook') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: furore;
-src: url(fonts/furore.otf);
+
+
+
+@font-face {
+    font-family: 'bebas_neuelight';
+    src: url('fonts/bebaslight-webfont.eot');
+    src: url('fonts/bebaslight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/bebaslight-webfont.woff2') format('woff2'),
+         url('fonts/bebaslight-webfont.woff') format('woff'),
+         url('fonts/bebaslight-webfont.ttf') format('truetype'),
+         url('fonts/bebaslight-webfont.svg#bebas_neuelight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: fraction;
-src: url(fonts/fraction.otf);
+
+
+
+@font-face {
+    font-family: 'bebas_neueregular';
+    src: url('fonts/bebasregular-webfont.eot');
+    src: url('fonts/bebasregular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/bebasregular-webfont.woff2') format('woff2'), 
+         url('fonts/bebasregular-webfont.woff') format('woff'),
+         url('fonts/bebasregular-webfont.ttf') format('truetype'),
+         url('fonts/bebasregular-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: bebasbook;
-src: url(fonts/bebasbook.ttf);
+@font-face {
+    font-family: 'furoreregular';
+    src: url('fonts/furore-webfont.eot');
+    src: url('fonts/furore-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/furore-webfont.woff2') format('woff2'),
+         url('fonts/furore-webfont.woff') format('woff'),
+         url('fonts/furore-webfont.ttf') format('truetype'),
+         url('fonts/furore-webfont.svg#furoreregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 
-@font-face
-{
-font-family: bebaslight;
-src: url(fonts/bebaslight.ttf);
-}
+@font-face {
+    font-family: 'michromaregular';
+    src: url('fonts/michroma-webfont.eot');
+    src: url('fonts/michroma-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/michroma-webfont.woff2') format('woff2'),
+         url('fonts/michroma-webfont.woff') format('woff'),
+         url('fonts/michroma-webfont.ttf') format('truetype'),
+         url('fonts/michroma-webfont.svg#michromaregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
-@font-face
-{
-font-family: bebasregular;
-src: url(fonts/bebasregular.ttf);
-}
-
-@font-face
-{
-font-family: bebasthin;
-src: url(fonts/bebasthin.ttf);
-}
-
-@font-face
-{
-font-family: bebasbold;
-src: url(fonts/bebasbold.ttf);
-}
-
-@font-face
-{
-font-family: simplifica;
-src: url(fonts/simplifica.ttf);
-}
-
-@font-face
-{
-font-family: codelight;
-src: url(fonts/codelight.otf);
-}
-
-@font-face
-{
-font-family: codebold;
-src: url(fonts/codebold.otf);
-}
-
-@font-face
-{
-font-family: neoulight;
-src: url(fonts/neoulight.ttf);
-}
-
-@font-face
-{
-font-family: neoubold;
-src: url(fonts/neoubold.ttf);
-}
-
-@font-face
-{
-font-family: veron;
-src: url(fonts/veron.ttf);
-}
-
-@font-face
-{
-font-family: OpenSans-Light;
-src: url(fonts/OpenSans-Light.ttf);
-}
-
-@font-face
-{
-font-family: OpenSans-Regular;
-src: url(fonts/OpenSans-Regular.ttf);
-}
-
-@font-face
-{
-font-family: OpenSans-Semibold;
-src: url(fonts/OpenSans-Semibold.ttf);
-}
-
-@font-face
-{
-font-family: michroma;
-src: url(fonts/michroma.ttf);
 }
